--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         <div class="content">
             <!-- <img src="googlelogo_color_272x92dp.png" height = "92" style="padding-top:109px" width="272"> -->
-            <img src="googlelogo_color_272x92dp.png" height = "92" style="padding-top:109px" class="img-fluid" alt="google logo">
+            <img src="googlelogo.png" height = "92" style="padding-top:109px" class="img-fluid" alt="google logo">
             <center>
             <form action="https://google.com/search">
                 <input id="rcorners2" type="text" name="q">
